--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "files": [
     "h.js"
   ],
-  "homepage": "https://github.com/makenowjust/h.js#readme",
+  "homepage": "https://h.js.org/",
   "keywords": [
     "highlight",
     "syntax"
