--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/makenowjust/h.js/issues"
   },
   "devDependencies": {
+    "tap-spec": "^4.1.0",
     "tape": "^4.2.1"
   },
   "engine": {
@@ -27,6 +28,6 @@
     "url": "git+https://github.com/makenowjust/h.js.git"
   },
   "scripts": {
-    "test": "tape test/*.js"
+    "test": "tape test/*.js | tap-spec"
   }
 }
