--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/makenowjust/h.js/issues"
   },
   "devDependencies": {
-    "tap-spec": "^4.1.0",
+    "tap-min": "^1.0.0",
     "tape": "^4.2.1"
   },
   "engine": {
@@ -28,6 +28,7 @@
     "url": "git+https://github.com/makenowjust/h.js.git"
   },
   "scripts": {
-    "test": "tape test/*.js | tap-spec"
-  }
+    "test": "tape test/*.js | tap-min"
+  },
+  "dependencies": {}
 }
