Fix travis files for testing both Node v0.10 and Node v0.12
Convert test written in ES6 into ES5 via Babel

--- a/package.json
+++ b/package.json
@@ -7,11 +7,9 @@
     "url": "https://github.com/makenowjust/h.js/issues"
   },
   "devDependencies": {
+    "babel": "^5.8.23",
     "tap-min": "^1.0.0",
     "tape": "^4.2.1"
-  },
-  "engine": {
-    "node": ">=4"
   },
   "files": [
     "h.js"
@@ -28,7 +26,6 @@
     "url": "git+https://github.com/makenowjust/h.js.git"
   },
   "scripts": {
-    "test": "tape test/*.js | tap-min"
-  },
-  "dependencies": {}
+    "test": "babel test/h.js > test/h.es5.js && node test/h.es5.js | tap-min"
+  }
 }
