--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "description": "Only 2KB JavaScript Syntax Highlighter",
   "version": "1.0.4",
   "author": "TSUYUSATO Kitsune <make.just.on@gmail.com>",
+  "babel": {
+    "presets": ["es2015"]
+  },
   "bugs": {
     "url": "https://github.com/makenowjust/h.js/issues"
   },
   "devDependencies": {
-    "babel": "^5.8.29",
+    "babel-cli": "^6.2.0",
+    "babel-core": "^6.2.1",
+    "babel-preset-es2015": "^6.1.18",
     "tap-min": "^1.0.0",
     "tape": "^4.2.2"
   },
