--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "h.js",
   "description": "Only 2KB JavaScript Syntax Highlighter",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "author": "TSUYUSATO Kitsune <make.just.on@gmail.com>",
   "babel": {
-    "presets": ["es2015"]
+    "presets": [
+      "es2015"
+    ]
   },
   "bugs": {
     "url": "https://github.com/makenowjust/h.js/issues"
