--- a/package.json
+++ b/package.json
@@ -3,18 +3,10 @@
   "description": "Only 2KB JavaScript Syntax Highlighter",
   "version": "1.1.1",
   "author": "TSUYUSATO Kitsune <make.just.on@gmail.com>",
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
-  },
   "bugs": {
     "url": "https://github.com/makenowjust/h.js/issues"
   },
   "devDependencies": {
-    "babel-cli": "^6.2.0",
-    "babel-core": "^6.2.1",
-    "babel-preset-es2015": "^6.1.18",
     "tap-min": "^1.0.0",
     "tape": "^4.2.2"
   },
@@ -33,6 +25,6 @@
     "url": "git+https://github.com/makenowjust/h.js.git"
   },
   "scripts": {
-    "test": "babel test/h.js > test/h.es5.js && node test/h.es5.js | tap-min"
+    "test": "node test/h.js | tap-min"
   }
 }
