--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "url": "https://github.com/makenowjust/h.js/issues"
   },
   "devDependencies": {
-    "tap-min": "^1.1.0",
-    "tape": "^4.6.2"
+    "ava": "^0.24.0",
+    "xo": "^0.18.2"
   },
   "files": [
     "h.js"
@@ -25,6 +25,12 @@
     "url": "git+https://github.com/makenowjust/h.js.git"
   },
   "scripts": {
-    "test": "node test/h.js | tap-min"
+    "test": "xo && ava"
+  },
+  "xo": {
+    "ignores": ["h.js", "page/*.js"],
+    "rules": {
+      "no-template-curly-in-string": 0
+    }
   }
 }
