--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
     "url": "https://github.com/makenowjust/h.js/issues"
   },
   "devDependencies": {
+    "@nuxtjs/bulma": "^1.1.0",
+    "@nuxtjs/font-awesome": "^1.0.3",
+    "@nuxtjs/markdownit": "^1.2.0",
     "ava": "^0.24.0",
-    "xo": "^0.18.2"
+    "bulma": "^0.6.2",
+    "node-sass": "^4.7.2",
+    "nuxt": "^1.1.1",
+    "prettier": "^1.10.2",
+    "sass-loader": "^6.0.6"
   },
-  "files": [
-    "h.js"
-  ],
+  "files": ["h.js"],
   "homepage": "https://h.js.org/",
-  "keywords": [
-    "highlight",
-    "syntax"
-  ],
+  "keywords": ["highlight", "syntax"],
   "license": "MIT",
   "main": "h.js",
   "repository": {
@@ -25,12 +27,6 @@
     "url": "git+https://github.com/makenowjust/h.js.git"
   },
   "scripts": {
-    "test": "xo && ava"
-  },
-  "xo": {
-    "ignores": ["h.js", "page/*.js"],
-    "rules": {
-      "no-template-curly-in-string": 0
-    }
+    "test": "yarn prettier --list-different '**/*.{js,json,scss,vue,md}' && ava"
   }
 }
