--- a/package.json
+++ b/package.json
@@ -17,14 +17,9 @@
     "prettier": "^1.10.2",
     "sass-loader": "^6.0.6"
   },
-  "files": [
-    "h.js"
-  ],
+  "files": ["h.js"],
   "homepage": "https://h.js.org/",
-  "keywords": [
-    "highlight",
-    "syntax"
-  ],
+  "keywords": ["highlight", "syntax"],
   "license": "MIT",
   "main": "h.js",
   "repository": {
