--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "keywords": ["highlight", "syntax"],
   "license": "MIT",
   "main": "h.js",
+  "module": "h.mjs",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/makenowjust/h.js.git"
