--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxtjs/markdownit": "^1.2.0",
     "ava": "^0.24.0",
     "bulma": "^0.6.2",
+    "highlight.js": "^9.12.0",
     "node-sass": "^4.7.2",
     "nuxt": "^1.1.1",
     "prettier": "^1.10.2",
