--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "h.js",
   "description": "Only 2KB JavaScript Syntax Highlighter",
-  "version": "3.0.1",
+  "version": "4.0.0",
   "author": "TSUYUSATO Kitsune <make.just.on@gmail.com>",
   "bugs": {
     "url": "https://github.com/makenowjust/h.js/issues"
@@ -18,7 +18,7 @@
     "prettier": "^1.10.2",
     "sass-loader": "^6.0.6"
   },
-  "files": ["h.js"],
+  "files": ["h.js", "h.mjs"],
   "homepage": "https://h.js.org/",
   "keywords": ["highlight", "syntax"],
   "license": "MIT",
