--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-sass": "^4.7.2",
     "nuxt": "^2.10.1",
     "prettier": "^1.10.2",
+    "rollup": "^1.25.1",
     "sass-loader": "^8.0.0"
   },
   "files": [
