--- a/package.json
+++ b/package.json
@@ -7,18 +7,22 @@
     "url": "https://github.com/makenowjust/h.js/issues"
   },
   "devDependencies": {
-    "@nuxtjs/bulma": "1.2.6",
-    "@nuxtjs/font-awesome": "1.0.4",
-    "@nuxtjs/markdownit": "1.2.7",
+    "@vue/cli-plugin-babel": "^4.2.2",
+    "@vue/cli-plugin-eslint": "^4.2.2",
+    "@vue/cli-service": "^4.2.2",
     "ava": "3.3.0",
+    "babel-eslint": "^10.0.3",
     "bulma": "0.8.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-vue": "^6.2.1",
     "esm": "3.2.25",
     "highlight.js": "9.18.1",
-    "node-sass": "4.13.1",
-    "nuxt": "2.11.0",
     "prettier": "1.19.1",
     "rollup": "1.31.1",
-    "sass-loader": "8.0.2"
+    "vue": "^2.6.11",
+    "vue-template-compiler": "^2.6.11"
   },
   "files": [
     "h.js",
@@ -37,11 +41,37 @@
     "url": "git+https://github.com/makenowjust/h.js.git"
   },
   "scripts": {
-    "test": "prettier --list-different '**/*.{js,json,scss,vue,md}' && ava"
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint && prettier --list-different '**/*.{json,css,md}'",
+    "serve": "vue-cli-service serve",
+    "test": "ava"
   },
   "ava": {
     "require": [
       "esm"
     ]
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "plugins": [
+      "prettier"
+    ],
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended",
+      "prettier",
+      "prettier/vue"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
   }
 }
