--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,8 @@ jobs:
     - uses: actions/checkout@master
     - uses: actions/setup-node@v3
       with:
-        node-version: '12.x'
+        node-version: 17.x
+        cache: yarn
     - run: yarn install
     - run: yarn lint
     - run: yarn test
