--- a/package.json
+++ b/package.json
@@ -7,22 +7,24 @@
     "url": "https://github.com/makenowjust/h.js/issues"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "5.0.3",
-    "@vue/cli-plugin-eslint": "5.0.3",
-    "@vue/cli-service": "5.0.3",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.40",
+    "autoprefixer": "^10.4.4",
     "ava": "4.1.0",
-    "babel-eslint": "10.1.0",
-    "eslint": "7.32.0",
-    "eslint-config-prettier": "6.15.0",
-    "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-vue": "8.5.0",
-    "prettier": "2.6.0",
-    "raw-loader": "4.0.2",
+    "daisyui": "^2.11.0",
+    "eslint": "^8.11.0",
+    "eslint-config-next": "^12.1.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-tailwindcss": "^3.5.0",
+    "next": "12.1.0",
+    "postcss": "^8.4.12",
+    "prettier": "^2.6.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "rollup": "2.70.1",
-    "typeface-nothing-you-could-do": "1.1.13",
-    "typeface-share-tech-mono": "1.1.13",
-    "vue": "3.2.31",
-    "vue-template-compiler": "2.6.14"
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.6.2"
   },
   "files": [
     "h.js",
@@ -41,34 +43,14 @@
     "url": "git+https://github.com/makenowjust/h.js.git"
   },
   "scripts": {
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint --no-fix && prettier --list-different '**/*.{json,md}'",
+    "build": "next build && next export",
+    "dev": "next dev",
+    "lint": "prettier --check '**/*.{css,json,ts,tsx}' && next lint",
     "serve": "vue-cli-service serve",
     "test": "ava"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ],
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "plugins": [
-      "prettier"
-    ],
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended",
-      "prettier",
-      "prettier/vue"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {
-      "prettier/prettier": "error"
-    }
-  }
+  ]
 }
