--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   "scripts": {
     "build": "next build && next export",
     "dev": "next dev",
-    "lint": "prettier --check '**/*.{css,json,ts,tsx}' && next lint",
+    "lint": "prettier --check '**/*.{css,js,json,mjs,ts,tsx}' && next lint",
     "serve": "vue-cli-service serve",
     "test": "ava"
   },
