--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         cache: yarn
     - run: yarn install
     - run: yarn build
-    - uses: peaceiris/actions-gh-pages@v3.8.0
+    - uses: peaceiris/actions-gh-pages@v3
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./out
